--- a/assets/css/slicknav.css
+++ b/assets/css/slicknav.css
@@ -244,11 +244,11 @@
 }
 .slicknav_menu .slicknav_icon {
 	margin-right: 6px;
-	margin-top: 3px;
+	/* margin-top: 3px; */
 	position: relative;
 	right: 5px;
-	top: -5px;
-	padding-bottom: 3px;
+	/* top: -5px;
+	padding-bottom: 3px; */
 }
 .slicknav_nav .slicknav_arrow {
 	float: right;
